Fix link color in style.scss for improved visibility and consistency

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
 }
 
 a {
-  color: #33ff33;
+  color: #dd4f4f;
 }
 
 .social-links a {
